# sirius_december

./: .env.example  .flake8  .gitignore  Dockerfile  New dashboard12-1704251930832.json  New dashboard12-1704251933869.json  README.md  alembic.ini  docker-compose.yml  flake_requirements.txt  local.docker-compose.yml  pyproject.toml  requirements.txt  smm_test_temp.csv
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: 325d401c15fe_initial_tables.py  3e0c1bf7289a_generate_table.py  801f71d901c7_добавлен_статус_для_заказа.py
app/: main.py
app/api/: api.py  auth.py  cart.py  log_route.py  product.py  user.py
app/cache/: cache.py  key_builder.py
app/core/: config.py  exceptions.py
app/db/: crud.py  models.py  session.py
app/on_startup/: redis.py
app/schemas/: schema.py
app/services/: security.py  token.py
conf/: .env  .env.example  config.py  env.example  logging.conf.yml
docker/: Dockerfile
fastapi_blog/: .flake8  .gitignore  alembic.ini  docker-compose.yml
fastapi_blog/alembic/: env.py  script.py.mako
fastapi_blog/alembic/versions/: 3e0c1bf7289a_generate_table.py
fastapi_blog/conf/: config.py
fastapi_blog/docker/: Dockerfile
fastapi_blog/fixture/sirius/: sirius.comment.json  sirius.post.json  sirius.user.json
fastapi_blog/grafana/: env.example
fastapi_blog/scripts/: migrate.py
fastapi_blog/tests/: conftest.py  const.py  my_types.py
fastapi_blog/tests/api/: conftest.py
fastapi_blog/webapp/: __main__.py  main.py  metrics.py
fastapi_blog/webapp/crud/: comment.py  post.py  user.py
fastapi_blog/webapp/models/: __init__.py
fastapi_blog/webapp/on_shutdown/: __init__.py
fastapi_blog/webapp/on_startup/: kafka.py  redis.py
fastapi_blog/webapp/utils/: middleware.py
fixture/sirius/: sirius.activity.json  sirius.client.json  sirius.comment.json  sirius.course.json  sirius.deal.json  sirius.employee.json  sirius.event.json  sirius.exchange.json  sirius.exchange_to_item.json  sirius.file.json  sirius.group.json  sirius.group_subject.json  sirius.ingredient.json  sirius.ingredient_to_recipe.json  sirius.institution.json  sirius.item.json  sirius.item_to_exchange.json  sirius.journal.json  sirius.lesson.json  sirius.order.json  sirius.order_product.json  sirius.post.json  sirius.product.json  sirius.recipe.json  sirius.reservation.json  sirius.restaurant.json  sirius.review.json  sirius.student.json  sirius.subject.json  sirius.subscription.json  sirius.teacher.json  sirius.tour.json  sirius.user.json  sirius.vacation.json
fixture/tms/: tms.category.json  tms.task.json  tms.user.json
fixtures/clinic/: clinic.doctor.json  clinic.doctor_to_service.json  clinic.service.json  clinic.user.json
grafana/: Dockerfile  datasource.yml
grafana/dashboards/: dashboard.json
prometheus/: counters.py  prometheus_config.yml
readme/: ex_req.json  req_example.json
scripts/: load_data.py  migrate.py
scripts/pg/: start.sql
scripts/postgres/: start.sql
scripts/web/: startup.sh
tests/: conf.py  conftest.py  const.py  my_types.py
tests/api/: conftest.py
tests/api/auth/: test_info.py  test_login.py  test_register.py
tests/api/course/: test_course_subscription.py  test_create_course.py  test_del_course.py  test_get_course.py  test_get_put_del_course.py  test_put_course.py
tests/api/exchange/: test_exchange.py
tests/api/exchange_to_item/: test_ingredient_to_recipe.py
tests/api/file/: const.py  test_resize.py
tests/api/fixtures/: sirius.file.json  sirius.lesson.json
tests/api/ingredient/: test_ingredient.py
tests/api/ingredient_to_recipe/: test_ingredient_to_recipe.py
tests/api/item/: test_item.py
tests/api/lesson/: test_create_get_lessons.py  test_delete_lesson.py  test_get_lesson.py  test_get_put_delete_lesson.py  test_put_lesson.py
tests/api/login/: test_login.py
tests/api/patient/: test_delete.py  test_get.py  test_make_appointment.py  test_post.py  test_update.py
tests/api/recipe/: test_recipe.py
tests/api/user/: test_create_user.py  test_del_user.py  test_get_del_user.py  test_get_me.py  test_get_my_subscription.py  test_get_user.py  test_user.py
tests/mocking/: kafka.py  redis.py
webapp/: __init__.py  __main__.py  logger.py  main.py  metrics.py
webapp/access/auth/: login.py
webapp/access/password/: __init__.py  reset_pswd.py
webapp/api/: __init__.py
webapp/api/admin/: router.py
webapp/api/auth/: __init__.py  delete_user.py  info.py  login.py  register.py  reset_pswd.py  router.py  update_user.py
webapp/api/category/: __init__.py  create.py  delete.py  info.py  router.py  update.py
webapp/api/crud/: router.py  (+1 more)
webapp/cache/: cache.py  key_builder.py  redis.py
webapp/crud/: activity.py  category.py  client.py  comment.py  const.py  course.py  crud.py  deal.py  doctor.py  doctor_to_service.py  employee.py  event.py  exchange_to_item.py  file.py  generate.py  get_exchange.py  get_exchange_item.py  get_ingredient.py  get_ingredient_recipe.py  get_item.py  get_recipe.py  get_user.py  group.py  group_subject.py  ingredient_to_recipe.py  institution.py  journal.py  lesson.py  models_crud.py  order.py  order_product.py  patient.py  post.py  product.py  reservation.py  restaurant.py  review.py  service.py  student.py  subject.py  (+8 more)
webapp/db/: __init__.py  kafka.py  minio.py  postgres.py  rabbitmq.py  redis.py
webapp/doctor_api/: __init__.py
webapp/integrations/: postgres.py
webapp/metrics/: metrics.py
webapp/middleware/: logger.py
webapp/models/: __init__.py  exceptions.py  meta.py
webapp/on_shutdown/: __init__.py
webapp/on_startup/: kafka.py  logger.py  main.py  rabbit.py  redis.py
webapp/pydantic_schemas/: doctor.py  service.py  timetable.py  user.py
webapp/schema/: crud.py  example_with_new.py  exchange.py  exchange_item.py  exchange_to_item.py  group.py  group_subject.py  ingredient.py  ingredient_to_recipe.py  institution.py  item.py  journal.py  recipe.py  student.py  subject.py  teacher.py  user.py
webapp/service_api/: __init__.py
webapp/utils/: decorator.py  exceptions.py  middleware.py  orjson_response.py
(+605 files in other folders)
